su album page creato layout del primo blocco del main

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11741,4 +11741,8 @@ textarea.form-control-lg {
 
 #main {
   width: 70%;
+}
+
+#albumPage {
+  background-color: rgb(204, 176, 73);
 }/*# sourceMappingURL=style.css.map */
