--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,3 +11,9 @@
 #albumPage {
   background-color: rgb(204, 176, 73);
 }
+#playBtn {
+  background-color: rgb(30, 215, 95);
+}
+#tabella {
+  background-color: rgba(33, 37, 41, 0.705);
+}
