--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,11 +9,12 @@
   width: 70%;
 }
 #albumPage {
-  background-color: rgb(204, 176, 73);
+  background-color: #030303;
+  background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%);
 }
 #playBtn {
   background-color: rgb(30, 215, 95);
 }
 #tabella {
-  background-color: rgba(33, 37, 41, 0.705);
+  background-color: rgba(33, 37, 41, 0.626);
 }
