--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -58,3 +58,9 @@
 @import "../../bootstrap/scss/utilities/api";
 
 // 8. Add additional custom code here
+@media screen and (max-width: 1200px) {
+    
+    #perTe:nth-last-child(){
+        display: none;
+    }
+}
