data width a thead

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11754,4 +11754,8 @@ textarea.form-control-lg {
 
 #tabella {
   background-color: rgba(33, 37, 41, 0.626);
+}
+
+#tracksTable {
+  width: 90%;
 }/*# sourceMappingURL=style.css.map */
