migliorata altezza tabella

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11759,5 +11759,5 @@ textarea.form-control-lg {
 
 #tracksTable {
   width: 90%;
-  height: 100%;
+  height: 100vh;
 }/*# sourceMappingURL=style.css.map */
