--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11740,12 +11740,15 @@ textarea.form-control-lg {
 
 #main {
   width: 70%;
-  height: 100vh;
+  height: 110vh;
+  overflow: scroll;
+  background-color: #030303;
+  background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%);
 }
 
 #albumPage {
-  background-color: #030303;
-  background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%);
+  /* background-color: #030303;
+  background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%); */
 }
 
 #playBtn {
