--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,11 +6,14 @@
 }
 #main {
   width: 70%;
-  height: 100vh;
-}
-#albumPage {
+  height: 110vh;
+  overflow: scroll;
   background-color: #030303;
   background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%);
+}
+#albumPage {
+  /* background-color: #030303;
+  background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%); */
 }
 #playBtn {
   background-color: rgb(30, 215, 95);
