--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11733,8 +11733,26 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
-@media screen and (max-width: 1200px) {
-  #perTe:nth-last-child(-n+2) {
-    display: none;
-  }
+.scrollbar {
+  height: 100vh;
+  overflow-y: auto;
+}
+
+/* Nascondi le frecce e personalizza il thumb */
+.scrollbar::-webkit-scrollbar {
+  width: 10px; /* Larghezza della scrollbar */
+}
+
+.scrollbar::-webkit-scrollbar-button {
+  display: none; /* Nasconde le frecce della scrollbar */
+}
+
+.scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: #888; /* Colore del thumb */
+  border-radius: 10px; /* Bordo arrotondato */
+  border: 3px solid transparent; /* Crea uno spazio tra il thumb e la track */
+}
+
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Colore del thumb al passaggio del mouse */
 }/*# sourceMappingURL=style.css.map */
