--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,24 @@
-@import "./partials/bootstrap-overrides"
+@import "./partials/bootstrap-overrides";
+.scrollbar{
+    height: 100vh;
+    overflow-y: auto;
+     }
+
+  /* Nascondi le frecce e personalizza il thumb */
+  .scrollbar::-webkit-scrollbar {
+    width: 10px; /* Larghezza della scrollbar */
+  }
+  
+  .scrollbar::-webkit-scrollbar-button {
+    display: none; /* Nasconde le frecce della scrollbar */
+  }
+  
+  .scrollbar:hover::-webkit-scrollbar-thumb {
+    background-color: #888; /* Colore del thumb */
+    border-radius: 10px; /* Bordo arrotondato */
+    border: 3px solid transparent; /* Crea uno spazio tra il thumb e la track */
+  }
+  
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Colore del thumb al passaggio del mouse */
+  }
