--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11848,7 +11848,9 @@ textarea.form-control-lg {
 }
 
 .scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #555;} /* Colore del thumb al passaggio del mouse */
+  background-color: #555; /* Colore del thumb al passaggio del mouse */
+}
+
 .aside {
   width: 15%;
   background-color: black;
@@ -11859,11 +11861,6 @@ textarea.form-control-lg {
   height: 100vh;
   overflow: scroll;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.768627451) 0%, #000000 46%, #ffcc70 100%);
-}
-
-#albumPage {
-  /* background-color: #030303;
-    background-image: linear-gradient(0deg, #030303 0%, #ffcc70 46%, #ffcc70 100%); */
 }
 
 #playBtn {
