creato barra riproduzione e js per footer (WIP)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11879,4 +11879,47 @@ textarea.form-control-lg {
 
 #BtnDropdown {
   background-color: rgba(66, 57, 24, 0.581);
+}
+
+.pedro {
+  scale: 1.1;
+}
+
+@keyframes bounce {
+  to {
+    translate: 0 20px;
+  }
+}
+.pedro {
+  animation: bounce 200ms linear infinite alternate;
+}
+
+@keyframes spin {
+  to {
+    rotate: -1turn;
+  }
+}
+.wrapper {
+  animation: spin 10s linear infinite;
+}
+
+.line {
+  width: 500px;
+  height: 5px;
+  margin-top: 5px;
+  background-color: #4D4D4D;
+  border-radius: 10px;
+  position: relative;
+  cursor: pointer;
+  margin-inline: 5px;
+}
+
+.lineChild {
+  cursor: pointer;
+  position: absolute;
+  border-radius: 10px;
+  background-color: #FFFFFF;
+  width: 50%;
+  height: 100%;
+  transition: width 0.1s;
 }/*# sourceMappingURL=style.css.map */
