--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11879,4 +11879,8 @@ textarea.form-control-lg {
 
 #BtnDropdown {
   background-color: rgba(66, 57, 24, 0.581);
+}
+
+.contenitoreCard:hover {
+  background-color: #1b1b1b !important;
 }/*# sourceMappingURL=style.css.map */
