--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11863,6 +11863,7 @@ textarea.form-control-lg {
 
 #main {
   overflow: scroll;
+  overflow-x: hidden;
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.768627451) 0%, #000000 46%, #ffcc70 100%);
 }
 
