--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11930,4 +11930,8 @@ textarea.form-control-lg {
 
 .contenitoreCard:hover {
   background-color: #1b1b1b !important;
+}
+
+.pointer {
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
