--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -154,7 +154,7 @@ $theme-colors: map-merge($theme-colors, $add-colors);
   background-color: #1b1b1b !important;
 }
 .pointer{
-  cursor: pointer;
+  cursor: pointer;}
 tr {
   border-radius: 10px;
 }
