update correlati artist page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11930,4 +11930,10 @@ textarea.form-control-lg {
 
 .contenitoreCard:hover {
   background-color: #1b1b1b !important;
+}
+
+.dropdown-menu {
+  background-color: #1b1b1b !important;
+  border-radius: 0.2rem;
+  padding: 0.4rem;
 }/*# sourceMappingURL=style.css.map */
