--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -153,3 +153,9 @@ $theme-colors: map-merge($theme-colors, $add-colors);
 .contenitoreCard:hover {
   background-color: #1b1b1b !important;
 }
+
+.dropdown-menu {
+  background-color: #1b1b1b !important;
+  border-radius: 0.2rem;
+  padding: 0.4rem;
+}
