--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -160,3 +160,14 @@ tr:hover {
   cursor: pointer;
   background-color: rgb(69, 69, 69);
 }
+#theadTable {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  z-index: 100;
+}
+
+.hidden {
+  display: none;
+}
