eliminata funzione scroll che bloccava albumPage

--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -103,7 +103,6 @@ $theme-colors: map-merge($theme-colors, $add-colors);
 }
 #tracksTable {
   width: 90%;
-  height: 100vh;
 }
 #BtnDropdown {
   background-color: rgba(66, 57, 24, 0.581);
@@ -160,14 +159,55 @@ tr:hover {
   cursor: pointer;
   background-color: rgb(69, 69, 69);
 }
-#theadTable {
-  width: 100%;
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  z-index: 100;
+@media (max-width: 599px) {
+  header {
+    min-width: 60px;
+  }
+  #btnAvanti {
+    display: none;
+  }
+  #btnEsplora {
+    display: none;
+  }
+  #btnInstall {
+    display: none;
+  }
 }
-
+@media (min-width: 600px) and (max-width: 1199px) {
+  header {
+    min-width: 70px;
+  }
+  #btnAvanti {
+    display: none;
+  }
+  #btnEsplora {
+    display: none;
+  }
+  #btnInstall {
+    display: none;
+  }
+}
+@media (min-width: 1200px) {
+  header {
+    min-width: 300px;
+  }
+  #btnAvanti {
+    display: inline;
+  }
+  #btnEsplora {
+    display: inline;
+  }
+  #btnInstall {
+    display: inline;
+  }
+}
 .hidden {
   display: none;
+}
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: black;
+  z-index: 1000;
 }
