--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -95,7 +95,7 @@ $theme-colors: map-merge($theme-colors, $add-colors);
   background-color: black;
 }
 #main {
-  background-image: linear-gradient(0deg, #000000c4 0%, #000000 46%, #ffcc70 100%);
+  /* background-image: linear-gradient(0deg, #000000c4 0%, #000000 46%, #ffcc70 100%); */
 }
 #playBtn {
   background-color: rgb(30, 215, 95);
