--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -96,6 +96,8 @@ $theme-colors: map-merge($theme-colors, $add-colors);
 }
 #main {
   /* background-image: linear-gradient(0deg, #000000c4 0%, #000000 46%, #ffcc70 100%); */
+
+  background-image: linear-gradient(359deg, #0a0b0bf9 0%, #000000 51%, #0e0e0e00 100%);
 }
 #playBtn {
   background-color: rgb(30, 215, 95);
