cambiata classe hidden con opacita' per migl;iorare transizione

--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -230,7 +230,13 @@ tr:hover {
   }
 }
 .hidden {
-  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  visibility: hidden;
+}
+.visibile {
+  opacity: 1;
+  visibility: visible;
 }
 .fixed-header {
   position: fixed;
