--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12014,7 +12014,14 @@ tr:hover {
   }
 }
 .hidden {
-  display: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  visibility: hidden;
+}
+
+.visibile {
+  opacity: 1;
+  visibility: visible;
 }
 
 .fixed-header {
