--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -191,6 +191,25 @@ tr:hover {
 #home-cerca {
   justify-content: center;
 }
+
+@media screen and (min-width: 500px) {
+  header {
+    min-width: 25%;
+    height: 100%;
+  }
+  main {
+    min-width: 75%;
+    height: 100%;
+
+    #artistNameBanner {
+      font-size: 50px;
+    }
+    #views {
+      display: none;
+    }
+  }
+}
+
 @media screen and (max-width: 599px) {
   header {
     min-width: 60px;
@@ -209,6 +228,7 @@ tr:hover {
   header {
     min-width: 70px;
   }
+
   #btnAvanti {
     display: none;
   }
@@ -223,6 +243,13 @@ tr:hover {
   header {
     min-width: 300px;
   }
+
+  main {
+    #artistNameBanner {
+      font-size: 80px;
+    }
+  }
+
   #btnAvanti {
     display: inline;
   }
@@ -244,14 +271,42 @@ tr:hover {
   z-index: 1000;
 }
 
+@media screen and (min-width: 900px) {
+  header {
+    min-width: 25%;
+    height: 100%;
+  }
+  main {
+    min-width: 75%;
+    height: 100%;
+
+    #artistNameBanner {
+      font-size: 80px;
+    }
+
+    #views {
+      display: block;
+    }
+  }
+}
+
 @media screen and (min-width: 600px) {
   header {
-    min-width: 70px;
+    min-width: 15%;
+    height: 100%;
+  }
+  main {
+    min-width: 75%;
+    height: 100%;
+
+    .views {
+      display: none;
+    }
   }
 }
 @media screen and (min-width: 1200px) {
   header {
-    min-width: 300px;
+    min-width: 70px;
   }
 
   #btnEsplora {
