aggiunta funzione che muove il playBtn in posizione fissa nel thead

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11959,6 +11959,11 @@ tr:hover {
   background-color: rgb(69, 69, 69);
 }
 
+#ancora:hover {
+  text-decoration: underline;
+  text-align: white;
+}
+
 #btnEsplora {
   display: none;
 }
@@ -12028,6 +12033,13 @@ tr:hover {
   width: 100%;
   background-color: black;
   z-index: 1000;
+}
+
+.fixed {
+  position: fixed;
+  top: 70px;
+  left: 560px;
+  z-index: 2000;
 }
 
 @media screen and (min-width: 600px) {
