--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -77,6 +77,9 @@ $font-sizes: map-merge($font-sizes, $custom-font-sizes);
   height: 74vh;
   overflow-y: auto;
 }
+#hiddenThead {
+  background-color: rgb(26, 26, 26);
+}
 #scrollThead {
   overflow-x: hidden;
 }
