--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11844,8 +11844,17 @@ textarea.form-control-lg {
   overflow-y: auto;
 }
 
+.colorNav {
+  background-color: rgb(164, 171, 177);
+}
+
+#playBtn2 {
+  background-color: rgb(30, 215, 95);
+}
+
 #hiddenThead {
   background-color: rgb(26, 26, 26);
+  height: 60px;
 }
 
 #scrollThead {
