--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -77,8 +77,15 @@ $font-sizes: map-merge($font-sizes, $custom-font-sizes);
   height: 74vh;
   overflow-y: auto;
 }
+.colorNav {
+  background-color: rgb(164, 171, 177);
+}
+#playBtn2 {
+  background-color: rgb(30, 215, 95);
+}
 #hiddenThead {
   background-color: rgb(26, 26, 26);
+  height: 60px;
 }
 #scrollThead {
   overflow-x: hidden;
