--- a/sass/partials/_bootstrap-overrides.scss
+++ b/sass/partials/_bootstrap-overrides.scss
@@ -157,9 +157,12 @@ $font-sizes: map-merge($font-sizes, $custom-font-sizes);
   position: absolute;
   border-radius: 10px;
   background-color: #ffffff;
-  width: 50%;
   height: 100%;
   transition: width 0.1s;
+}
+
+.lineChild:hover {
+  background-color: green;
 }
 
 .contenitoreCard:hover {
